# transformer-compiler-workbench

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: model.export.json  model.inputs.npz  model.onnx  model.opt.onnx  model.opt.ort.onnx
artifacts/mlir/: ONNX_MLIR_SETUP.md  lowering.json
docs/: NVIDIA_LPX_ALIGNMENT.md  VAST_GPU_RESULTS.md
reports/: baseline.json  baseline.md  benchmark.json  benchmark.vast.json  index.md  opt.json  validate.cuda.json  validate.json
scripts/: reproduce.sh
tcw/: __init__.py  __main__.py  analyze.py  benchmark.py  cli.py  export.py  io.py  lower.py  onnx_helpers.py  optimize.py  report.py  rewrite.py  validate.py  visualize.py
tests/: test_workbench.py
