[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-compiler-workbench"
version = "0.1.0"
description = "A CPU-first ONNX/MLIR compiler workbench for transformer inference graphs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Transformer Compiler Workbench contributors" }]
dependencies = [
    "numpy>=1.24",
    "onnx>=1.16",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
export = [
    "torch>=2.2",
    "transformers>=4.40",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
tcw = "tcw.cli:main"

[tool.setuptools.packages.find]
include = ["tcw*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
